--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -293,7 +293,7 @@
 
 \newcommand{\openpos}[1]{O_T^{#1}}
 
-\newcommand{\types}{\mathsf{Types}}
+\newcommand{\types}{T}
 
 \newcommand{\tyresfield}{\to \cdot}
 
