partial introduction of unit

--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -224,9 +224,9 @@ The relational typing relation is defined using operators over
 relational types.
 %
 The operators include generalizations of the type constructors and
-operators over individual algebraic types, generalizations of type
-operators used in refinement type systems, and operators introduced to
-operate over features unique to relational types.
+operators over structural types, generalizations of type operators
+used in refinement type systems, and operators introduced to operate
+over features unique to relational types.
 
 \paragraph{Relational refinement function types}
 %
