--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -1,4 +1,6 @@
 % shorthand: paper-specific shorthand
+\newcommand{\absvars}{X_A}
+
 \newcommand{\alltrue}{\mathsf{AllTrue}}
 
 \newcommand{\andsub}{\mathsf{AndSub}}
@@ -25,6 +27,8 @@
 
 \newcommand{\base}{\mathsf{Base}}
 
+\newcommand{\basety}{\mathbb{D}}
+
 \newcommand{\basevalues}{\mathsf{Vals}_B}
 
 \newcommand{\chc}[1]{\mathsf{CHC}[ #1 ]}
@@ -41,7 +45,7 @@
 
 \newcommand{\clauses}[1]{\mathsf{Clauses}[ #1 ]}
 
-\newcommand{\const}{\mathsf{Const}}
+\newcommand{\const}{C}
 
 \newcommand{\ctrclause}[3]{ #1 \bowtie #2 \preceq #3 }
 
@@ -310,6 +314,10 @@
 \newcommand{\unfoldreltypes}[2]{\mathsf{UnfoldTypes}[ #1, #2 ]}
 
 \newcommand{\unify}{\mathsf{Unify}}
+
+\newcommand{\unit}{\cc{()}}
+
+\newcommand{\unitty}{\cdot}
 
 \newcommand{\unwind}{\textsc{Unwind}\xspace}
 
