adds unit, reworks definition of refinement theory

--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -1002,7 +1002,7 @@ For all $E_0 \subseteq \subexps{ P_0 }$ and $E_1 \subseteq \subexps{
 \verifybnd generates the following clauses:
 %
 $\mathcal{R} \joinctr %
-\bigland \setformer{ c = (c, i) }{ c \in \const, i \in I, (c, i) \in E
+\bigland \setformer{ c = (c, i) }{ c \in \consts, i \in I, (c, i) \in E
 } \subtype \mathcal{R}'$.
 
 % clauses for op:
