--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -45,7 +45,7 @@
 
 \newcommand{\clauses}[1]{\mathsf{Clauses}[ #1 ]}
 
-\newcommand{\const}{C}
+\newcommand{\consts}{C}
 
 \newcommand{\ctrclause}[3]{ #1 \bowtie #2 \preceq #3 }
 
@@ -113,7 +113,9 @@
 
 \newcommand{\folded}{\mathsf{Folded}}
 
-\newcommand{\formulas}[1]{\mathsf{Forms}[ #1 ]}
+\newcommand{\formulas}[1]{\mathcal{F}_{#1}}
+
+\newcommand{\fovals}{V_R}
 
 \newcommand{\freevars}{\mathsf{FreeVars}}
 
@@ -136,6 +138,8 @@
 \newcommand{\instrules}[1]{\mathsf{InstRules}[ #1 ]}
 
 \newcommand{\instrulepreds}[1]{\mathsf{InstPreds}[ #1 ]}
+
+\newcommand{\interp}[1]{\underline{#1}}
 
 \newcommand{\interps}[1]{\mathsf{Interps[ #1 ]}}
 
