--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -325,7 +325,7 @@
 
 \newcommand{\unwind}{\textsc{Unwind}\xspace}
 
-\newcommand{\values}{\mathsf{Values}}
+\newcommand{\values}{V}
 
 \newcommand{\vars}{X}
 
